Fix et-al links

--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ issues:
       pages:
       - 5
       - 13
-    - slug: Strobl~et-al
+    - slug: Strobl~et~al
       title: Party on!
       author:
       - Carolin Strobl
@@ -150,7 +150,7 @@ issues:
       pages:
       - 18
       - 25
-    - slug: Coeurjolly~et-al
+    - slug: Coeurjolly~et~al
       title: |-
         asympTest: A Simple R Package for Classical Parametric
         Statistical Tests and Confidence Intervals in Large Samples
@@ -162,7 +162,7 @@ issues:
       pages:
       - 26
       - 30
-    - slug: Carpenter~et-al
+    - slug: Carpenter~et~al
       title: 'copas: An R package for Fitting the Copas Selection Model'
       author:
       - J. Carpenter
@@ -185,7 +185,7 @@ issues:
       pages:
       - 45
       - 55
-    - slug: Graves~et-al
+    - slug: Graves~et~al
       title: 'sos: Searching Help Pages of R Packages'
       author:
       - Spencer Graves
@@ -224,7 +224,7 @@ issues:
     num: 1
     month: jun
     articles:
-    - slug: Pramana~et-al
+    - slug: Pramana~et~al
       title: |-
         IsoGene: An R Package for Analyzing Dose-response Studies
         in Microarray Experiments
@@ -285,7 +285,7 @@ issues:
       pages:
       - 39
       - 43
-    - slug: Thioulouse~et-al
+    - slug: Thioulouse~et~al
       title: |-
         Online Reproducible Research: An Application to
         Multivariate Analysis of Bacterial DNA Fingerprint Data
@@ -325,7 +325,7 @@ issues:
     num: 2
     month: dec
     articles:
-    - slug: Soetaert~et-al
+    - slug: Soetaert~et~al
       title: Solving Differential Equations in R
       author:
       - Karline Soetaert
@@ -340,7 +340,7 @@ issues:
       pages:
       - 16
       - 19
-    - slug: Roennegaard~et-al
+    - slug: Roennegaard~et~al
       title: |-
         hglm: A Package for Fitting Hierarchical Generalized Linear
         Models
@@ -379,7 +379,7 @@ issues:
       pages:
       - 48
       - 55
-    - slug: Bilder~et-al
+    - slug: Bilder~et~al
       title: 'binGroup: A Package for Group Testing'
       author:
       - Christopher R. Bilder
@@ -397,7 +397,7 @@ issues:
       pages:
       - 61
       - 67
-    - slug: Ishwaran~et-al
+    - slug: Ishwaran~et~al
       title: |-
         spikeslab: Prediction and Variable Selection Using Spike
         and Slab Regression
@@ -427,7 +427,7 @@ issues:
       pages:
       - 5
       - 10
-    - slug: Bohn~et-al
+    - slug: Bohn~et~al
       title: Content-Based Social Network Analysis of Mailing Lists
       author:
       - Angela Bohn
@@ -437,7 +437,7 @@ issues:
       pages:
       - 11
       - 18
-    - slug: Chalabi~et-al
+    - slug: Chalabi~et~al
       title: Rmetrics - timeDate Package
       author:
       - Yohan Chalabi
@@ -454,7 +454,7 @@ issues:
       pages:
       - 25
       - 26
-    - slug: Ardia~et-al
+    - slug: Ardia~et~al
       title: Differential Evolution with DEoptim
       author:
       - David Ardia
@@ -471,7 +471,7 @@ issues:
       pages:
       - 35
       - 43
-    - slug: Lafitte~et-al
+    - slug: Lafitte~et~al
       title: Cryptographic Boolean Functions with R
       author:
       - Frédéric Lafitte
@@ -486,7 +486,7 @@ issues:
       pages:
       - 48
       - 54
-    - slug: Fraley~et-al
+    - slug: Fraley~et~al
       title: Probabilistic Weather Forecasting in R
       author:
       - Chris Fraley
@@ -497,7 +497,7 @@ issues:
       pages:
       - 55
       - 63
-    - slug: Kane~et-al
+    - slug: Kane~et~al
       title: Analyzing an Electronic Limit Order Book
       author:
       - David Kane
@@ -539,7 +539,7 @@ issues:
     num: 2
     month: dec
     articles:
-    - slug: Baier~et-al
+    - slug: Baier~et~al
       title: Creating and Deploying an Application with (R)Excel and R
       author:
       - Thomas Baier
@@ -644,7 +644,7 @@ issues:
     num: 1
     month: jun
     articles:
-    - slug: G~Barnett-et-al
+    - slug: G~Barnett-et~al
       title: Analysing Seasonal Data
       author:
       - Adrian G Barnett
@@ -653,7 +653,7 @@ issues:
       pages:
       - 5
       - 10
-    - slug: Holmes~et-al
+    - slug: Holmes~et~al
       title: |-
         MARSS: Multivariate Autoregressive State-space Models for
         Analyzing Time-series Data
@@ -686,7 +686,7 @@ issues:
       pages:
       - 41
       - 44
-    - slug: Anoke~et-al
+    - slug: Anoke~et~al
       title: |-
         xgrid and R: Parallel Distributed Processing Using
         Heterogeneous Groups of Apple Computers
@@ -717,7 +717,7 @@ issues:
       pages:
       - 60
       - 63
-    - slug: Hornik~et-al
+    - slug: Hornik~et~al
       type: From the Core
       title: |-
         Who Did What? The Roles of R Package Authors
@@ -770,7 +770,7 @@ issues:
       pages:
       - 19
       - 27
-    - slug: Do~Ha-et-al
+    - slug: Do~Ha-et~al
       title: |-
         frailtyHL: A Package for Fitting Frailty Models with
         H-likelihood
@@ -781,7 +781,7 @@ issues:
       pages:
       - 28
       - 37
-    - slug: Nieuwenhuis~et-al
+    - slug: Nieuwenhuis~et~al
       title: |-
         influence.ME: Tools for Detecting Influential Data in Mixed
         Effects Models
