--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
 issues:
   - issue: accepted
     articles:
+    - title: 'ExactCIdiff: An R Package for Computing Exact Confidence Intervals for the Difference of Two Proportions'
+      slug: wang-shan
+      author:
+      - Weizhen Wang
+      - Guogen Shan
   - issue: 2009-1
     year: 2009
     volume: 1
