--- a/_config.yml
+++ b/_config.yml
@@ -1,64 +1,5 @@
 issues:
 - issue: accepted
-  articles:
-  - title: 'factorplot: Improving Presentation of Simple Contrasts in GLMs'
-    slug: armstrong
-    author: David A. Armstrong II
-  - title: 'spMC: Modelling Spatial Random Fields with Continuous Lag Markov Chains'
-    slug: sartore
-    author: Luca Sartore
-  - title: RNetCDF – A Package for Reading and Writing NetCDF Datasets
-    slug: michna-woods
-    author:
-    - Pavel Michna
-    - Milton Woods
-  - title: Surface Melting Curve Analysis with R
-    slug: roediger-bohm-schimke
-    author:
-    - Stefan Roediger
-    - Alexander Bohm
-    - Ingolf Schimke
-  - title: Performance Attribution for Equity Portfolios
-    slug: lu-kane
-    author:
-    - Yang Lu
-    - and David Kane
-  - title: 'ExactCIdiff: An R Package for Computing Exact Confidence Intervals for
-      the Difference of Two Proportions'
-    slug: wang-shan
-    author:
-    - Weizhen Wang
-    - Guogen Shan
-  - title: 'rlme: An R Package for Rank-Based Estimation and Prediction in Random
-      Effects Nested Models'
-    slug: bilgic-susmann
-    author:
-    - Yusuf K. Bilgic
-    - Herb Susmann
-  - title: Temporal Disaggregation of Time Series
-    slug: sax-steiner
-    author:
-    - Christoph Sax
-    - Peter Steiner
-  - title: 'CompLognormal: An R package for composite lognormal distributions'
-    slug: nadarajah-bakar
-    author:
-    - S. Nadarajah
-    - S. A. A. Bakar
-  - title: 'lfe: Fitting Linear Models with Multiple Factors with Many Levels'
-    slug: gaure
-    author: Simen Gaure
-  - title: On Sampling from the Multivariate t Distribution
-    slug: hofert
-    author: Marius Hofert
-  - title: Writing grid Extensions
-    slug: murrell
-    author: Paul Murrell
-  - title: 'Conference Report: Deuxièmes Rencontres R'
-    slug: siberchicot-dray
-    author:
-    - Aurelie Siberchicot
-    - Stephane Dray
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -1123,3 +1064,157 @@ issues:
     pages:
     - 239
     - 264
+- issue: 2013-2
+  year: 2013
+  volume: 5
+  num: 2
+  month: Dec
+  articles:
+  - title: Editorial
+    author: Hadley Wickham
+    slug: editorial
+    pages:
+    - 3
+    - 4
+  - heading: Contributed Research Articles
+  - title: 'factorplot: Improving Presentation of Simple Contrasts in GLMs'
+    slug: armstrong
+    author: David A. Armstrong II
+    pages:
+    - 4
+    - 16
+  - title: 'spMC: Modelling Spatial Random Fields with Continuous Lag Markov Chains'
+    slug: sartore
+    author: Luca Sartore
+    pages:
+    - 16
+    - 29
+  - title: RNetCDF – A Package for Reading and Writing NetCDF Datasets
+    slug: michna-woods
+    author:
+    - Pavel Michna
+    - Milton Woods
+    pages:
+    - 29
+    - 37
+  - title: Surface Melting Curve Analysis with R
+    slug: roediger-bohm-schimke
+    author:
+    - Stefan Roediger
+    - Alexander Bohm
+    - Ingolf Schimke
+    pages:
+    - 37
+    - 53
+  - title: Performance Attribution for Equity Portfolios
+    slug: lu-kane
+    author:
+    - Yang Lu
+    - and David Kane
+    pages:
+    - 53
+    - 63
+  - title: 'ExactCIdiff: An R Package for Computing Exact Confidence Intervals for
+      the Difference of Two Proportions'
+    slug: wang-shan
+    author:
+    - Weizhen Wang
+    - Guogen Shan
+    pages:
+    - 63
+    - 72
+  - title: 'rlme: An R Package for Rank-Based Estimation and Prediction in Random
+      Effects Nested Models'
+    slug: bilgic-susmann
+    author:
+    - Yusuf K. Bilgic
+    - Herb Susmann
+    pages:
+    - 72
+    - 81
+  - title: Temporal Disaggregation of Time Series
+    slug: sax-steiner
+    author:
+    - Christoph Sax
+    - Peter Steiner
+    pages:
+    - 81
+    - 89
+  - title: Dynamic Parallelization of R Functions
+    slug: boehringer
+    author: Stefan Boehringer
+    pages:
+    - 89
+    - 98
+  - title: 'CompLognormal: An R package for composite lognormal distributions'
+    slug: nadarajah-bakar
+    author:
+    - S. Nadarajah
+    - S. A. A. Bakar
+    pages:
+    - 98
+    - 105
+  - title: 'lfe: Fitting Linear Models with Multiple Factors with Many Levels'
+    slug: gaure
+    author: Simen Gaure
+    pages:
+    - 105
+    - 118
+  - title: The R in Robotics
+    slug: dietrich-zug-kaiser
+    author:
+    - André Dietrich
+    - Sebastian Zug
+    - Jörg Kaiser
+    pages:
+    - 118
+    - 130
+  - title: On Sampling from the Multivariate t Distribution
+    slug: hofert
+    author: Marius Hofert
+    pages:
+    - 130
+    - 138
+  - title: 'betategarch: Simulation, Estimation and Forecasting of Beta-Skew-t-EGARCH
+      Models'
+    slug: sucarrat
+    author: Genaro Sucarrat
+    pages:
+    - 138
+    - 149
+  - title: Changes to grid from 3.0.0
+    slug: murrell
+    author: Paul Murrell
+    pages:
+    - 149
+    - 162
+  - title: 'Conference Report: Deuxièmes Rencontres R'
+    slug: siberchicot-dray
+    author:
+    - Aurelie Siberchicot
+    - Stephane Dray
+    pages:
+    - 162
+    - 163
+  - heading: News and Notes
+  - title: News from the Bioconductor Project
+    author: Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 163
+    - 165
+  - title: R Foundation News
+    author: Kurt Hornik
+    slug: r-foundation
+    pages:
+    - 165
+    - 167
+  - title: Changes in R
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: r-changes
+    pages:
+    - 167
+    - 175
+ 
