--- a/_config.yml
+++ b/_config.yml
@@ -1110,7 +1110,7 @@ issues:
     slug: lu-kane
     author:
     - Yang Lu
-    - and David Kane
+    - David Kane
     pages:
     - 53
     - 62
@@ -1188,24 +1188,24 @@ issues:
     pages:
     - 148
     - 161
-  - title: 'Conference Report: Deuxièmes Rencontres R'
-    slug: siberchicot-dray
-    author:
-    - Aurelie Siberchicot
-    - Stephane Dray
+  - heading: News and Notes
+  - title: R Foundation News
+    author: Kurt Hornik
+    slug: r-foundation
     pages:
     - 161
     - 162
-  - heading: News and Notes
   - title: News from the Bioconductor Project
     author: Bioconductor Team
     slug: bioconductor
     pages:
     - 162
     - 164
-  - title: R Foundation News
-    author: Kurt Hornik
-    slug: r-foundation
+  - title: 'Conference Report: Deuxièmes Rencontres R'
+    author:
+    - Aurelie Siberchicot
+    - Stephane Dray
+    slug: siberchicot-dray
     pages:
     - 164
     - 166
