changing config to add (some) accepted articles

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,16 @@
 issues:
 - issue: accepted
+  articles:
+  - slug: sievert
+    title: Taming PITCHf/x Data with XML2R and pitchRx
+    author: Carson Sievert
+  - slug: gu-shapiro-hughes-etal
+    title: Stratified Weibull Regression Model for Interval-Censored Data
+    author: 
+    - Xiangdong Gu
+    - David Shapiro
+    - Michael D. Hughes
+    - Raji Balasubramanian"
 - issue: 2009-1
   year: 2009
   volume: 1
