--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ issues:
     - Xiangdong Gu
     - David Shapiro
     - Michael D. Hughes
-    - Raji Balasubramanian"
+    - Raji Balasubramanian
 - issue: 2009-1
   year: 2009
   volume: 1
