yaml snippets for online articles

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,36 @@
 issues:
 - issue: accepted
   articles:
-  - slug: sievert
-    title: Taming PITCHf/x Data with XML2R and pitchRx
+  - title: Taming PITCHf/x Data with XML2R and pitchRx
+    slug: sievert
     author: Carson Sievert
-  - slug: gu-shapiro-hughes-etal
-    title: Stratified Weibull Regression Model for Interval-Censored Data
-    author: 
+  - title: Stratified Weibull Regression Model for Interval-Censored Data
+    slug: gu-shapiro-hughes-etal
+    author:
     - Xiangdong Gu
     - David Shapiro
     - Michael D. Hughes
     - Raji Balasubramanian
+  - title: 'Rankcluster: An R Package For Clustering Multivariate Partial Rankings'
+    slug: jacques-grimonprez-biernacki
+    author:
+    - Julien Jacques
+    - Quentin Grimonprez
+    - Christophe Biernacki
+  - title: 'stringdist: an R Package for Approximate String Matching'
+    slug: loo
+    author: Mark van der Loo
+  - title: 'RStorm: Developing and Testing Streaming Algorithms in R'
+    slug: kaptein
+    author: Maurits Kaptein
+  - title: Archiving Reproducible Research with R and Dataverse
+    slug: leeper
+    author: Thomas J. Leeper
+  - title: Addendum to Statistical Software from a Blind Person's Perspective
+    slug: godfrey-erhardt
+    author:
+    - A. Jonathan R. Godfrey
+    - Robert Erhardt
 - issue: 2009-1
   year: 2009
   volume: 1
