added code to process bibauthor fields

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ issues:
     author:
     - Stefan Theußl
     - Achim Zeileis
+    bibauthor: Stefan Theu\ss{}l and Achim Zeileis
     pages:
     - 9
     - 14
