moving accepted articles online

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,18 @@ issues:
     - David Shapiro
     - Michael D. Hughes
     - Raji Balasubramanian
+  - title: 'The RWiener package: an R package providing distribution functions for the
+      Wiener diffusion model'
+    slug: vandekerckhove-wabersich
+    author:
+    - Joachim Vandekerckhove
+    - Dominik Wabersich
+  - title: 'rotations: An R Package for SO(3) Data'
+    slug: stanfill-hofmann-genschel
+    author:
+    - Bryan Stanfill
+    - Heike Hofmann
+    - Ulrike Genschel
   - title: 'Rankcluster: An R Package For Clustering Multivariate Partial Rankings'
     slug: jacques-grimonprez-biernacki
     author:
@@ -24,6 +36,12 @@ issues:
   - title: 'RStorm: Developing and Testing Streaming Algorithms in R'
     slug: kaptein
     author: Maurits Kaptein
+  - title: 'MRCV: A Package for Analyzing Categorical Variables with Multiple Response
+      Options'
+    slug: koziol-bilder
+    author:
+    - Natalie Koziol
+    - Christopher Bilder
   - title: Archiving Reproducible Research with R and Dataverse
     slug: leeper
     author: Thomas J. Leeper
@@ -32,6 +50,11 @@ issues:
     author:
     - A. Jonathan R. Godfrey
     - Robert Erhardt
+  - title: 'sgr: A Package for Simulating Conditional Fake Ordinal Data'
+    slug: lombardi-pastore
+    author:
+    - Luigi Lombardi
+    - Massimiliano Pastore
 - issue: 2009-1
   year: 2009
   volume: 1
