--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,20 @@ issues:
     author:
     - Joachim Vandekerckhove
     - Dominik Wabersich
+  - title: 'PivotalR: A Package for Machine Learning on Big Data'
+    slug: qian
+    author: Hai Qian
   - title: 'rotations: An R Package for SO(3) Data'
     slug: stanfill-hofmann-genschel
     author:
     - Bryan Stanfill
     - Heike Hofmann
     - Ulrike Genschel
+  - title: 'investr: An R Package for Inverse Estimation'
+    slug: greenwell-kabban
+    author:
+    - Brandon Greenwell
+    - Christine Schubert Kabban
   - title: 'Rankcluster: An R Package For Clustering Multivariate Partial Rankings'
     slug: jacques-grimonprez-biernacki
     author:
@@ -50,6 +58,13 @@ issues:
     author:
     - A. Jonathan R. Godfrey
     - Robert Erhardt
+  - title: 'oligoMask: A framework for assessing and removing the effect of genetic
+      variants on microarray probes'
+    slug: bottomly-wilmot-mcweeney
+    author:
+    - Daniel Bottomly
+    - Beth Wilmot
+    - Shannon McWeeney
   - title: 'sgr: A Package for Simulating Conditional Fake Ordinal Data'
     slug: lombardi-pastore
     author:
