--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,11 @@ issues:
   - title: 'RStorm: Developing and Testing Streaming Algorithms in R'
     slug: kaptein
     author: Maurits Kaptein
+  - title: The gridSVG package
+    slug: murrell-potter
+    author:
+    - Paul Murrell
+    - Simon Potter
   - title: 'MRCV: A Package for Analyzing Categorical Variables with Multiple Response
       Options'
     slug: koziol-bilder
