include changes on CRAN article

--- a/_config.yml
+++ b/_config.yml
@@ -1125,9 +1125,7 @@ issues:
     - 220
     - 221
   - title: Changes in R
-    author:
-    - Kurt Hornik
-    - Achim Zeileis
+    author: the R Core Team
     slug: r-changes
     pages:
     - 221
@@ -1285,12 +1283,20 @@ issues:
     pages:
     - 164
     - 166
-  - title: Changes in R
+  - title: Changes on CRAN
     author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 166
+    - 192
+ - title: Changes in R
+    author: the R Core Team
     - Kurt Hornik
     - Achim Zeileis
     slug: r-changes
     pages:
-    - 166
-    - 172
+    - 192
+    - 198
  
