fixed another typo

--- a/_config.yml
+++ b/_config.yml
@@ -1125,7 +1125,7 @@ issues:
     - 220
     - 221
   - title: Changes in R
-    author: the R Core Team
+    author: The R Core Team
     slug: r-changes
     pages:
     - 221
@@ -1292,9 +1292,7 @@ issues:
     - 166
     - 192
   - title: Changes in R
-    author: the R Core Team
-    - Kurt Hornik
-    - Achim Zeileis
+    author: The R Core Team
     slug: r-changes
     pages:
     - 192
