--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,12 @@ issues:
     - David Shapiro
     - Michael D. Hughes
     - Raji Balasubramanian
+  - title: 'brainR: Interactive 3 and 4d Images of High Resolution Neuroimage Data'
+    slug: muschelli-sweeney-crainiceanu
+    author:
+    - John Muschelli
+    - Elizabeth Sweeney
+    - Ciprian Crainiceanu
   - title: 'The RWiener package: an R package providing distribution functions for the
       Wiener diffusion model'
     slug: vandekerckhove-wabersich
