website for new issue

--- a/_config.yml
+++ b/_config.yml
@@ -2,85 +2,6 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - title: Taming PITCHf/x Data with XML2R and pitchRx
-    slug: sievert
-    author: Carson Sievert
-  - title: Stratified Weibull Regression Model for Interval-Censored Data
-    slug: gu-shapiro-hughes-etal
-    author:
-    - Xiangdong Gu
-    - David Shapiro
-    - Michael D. Hughes
-    - Raji Balasubramanian
-  - title: 'brainR: Interactive 3 and 4d Images of High Resolution Neuroimage Data'
-    slug: muschelli-sweeney-crainiceanu
-    author:
-    - John Muschelli
-    - Elizabeth Sweeney
-    - Ciprian Crainiceanu
-  - title: 'The RWiener package: an R package providing distribution functions for the
-      Wiener diffusion model'
-    slug: vandekerckhove-wabersich
-    author:
-    - Joachim Vandekerckhove
-    - Dominik Wabersich
-  - title: 'PivotalR: A Package for Machine Learning on Big Data'
-    slug: qian
-    author: Hai Qian
-  - title: 'rotations: An R Package for SO(3) Data'
-    slug: stanfill-hofmann-genschel
-    author:
-    - Bryan Stanfill
-    - Heike Hofmann
-    - Ulrike Genschel
-  - title: 'investr: An R Package for Inverse Estimation'
-    slug: greenwell-kabban
-    author:
-    - Brandon Greenwell
-    - Christine Schubert Kabban
-  - title: 'Rankcluster: An R Package For Clustering Multivariate Partial Rankings'
-    slug: jacques-grimonprez-biernacki
-    author:
-    - Julien Jacques
-    - Quentin Grimonprez
-    - Christophe Biernacki
-  - title: 'stringdist: an R Package for Approximate String Matching'
-    slug: loo
-    author: Mark van der Loo
-  - title: 'RStorm: Developing and Testing Streaming Algorithms in R'
-    slug: kaptein
-    author: Maurits Kaptein
-  - title: The gridSVG package
-    slug: murrell-potter
-    author:
-    - Paul Murrell
-    - Simon Potter
-  - title: 'MRCV: A Package for Analyzing Categorical Variables with Multiple Response
-      Options'
-    slug: koziol-bilder
-    author:
-    - Natalie Koziol
-    - Christopher Bilder
-  - title: Archiving Reproducible Research with R and Dataverse
-    slug: leeper
-    author: Thomas J. Leeper
-  - title: Addendum to Statistical Software from a Blind Person's Perspective
-    slug: godfrey-erhardt
-    author:
-    - A. Jonathan R. Godfrey
-    - Robert Erhardt
-  - title: 'oligoMask: A framework for assessing and removing the effect of genetic
-      variants on microarray probes'
-    slug: bottomly-wilmot-mcweeney
-    author:
-    - Daniel Bottomly
-    - Beth Wilmot
-    - Shannon McWeeney
-  - title: 'sgr: A Package for Simulating Conditional Fake Ordinal Data'
-    slug: lombardi-pastore
-    author:
-    - Luigi Lombardi
-    - Massimiliano Pastore
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -1303,4 +1224,199 @@ issues:
     pages:
     - 192
     - 198
+- issue: 2014-1
+  year: 2014
+  volume: 6
+  num: 1
+  month: Jun
+  articles:
+  - title: Editorial
+    author: Deepayan Sarkar
+    slug: editorial
+    pages:
+    - 3
+    - 3
+  - heading: Contributed Research Articles
+  - title: Taming PITCHf/x Data with XML2R and pitchRx
+    slug: sievert
+    author: Carson Sievert
+    pages:
+    - 5
+    - 19
+  - title: Stationarity Testing and Texture Counting in R
+    slug: nunes-taylor-eckley
+    author:
+    - Matthew A. Nunes
+    - Sarah L. Taylor
+    - Idris A. Eckley
+    pages:
+    - 20
+    - 30
+  - title: Stratified Weibull Regression Model for Interval-Censored Data
+    slug: gu-shapiro-hughes-etal
+    author:
+    - Xiangdong Gu
+    - David Shapiro
+    - Michael D. Hughes
+    - Raji Balasubramanian
+    pages:
+    - 31
+    - 40
+  - title: 'brainR: Interactive 3 and 4D Images of High Resolution Neuroimage Data'
+    slug: muschelli-sweeney-crainiceanu
+    author:
+    - John Muschelli
+    - Elizabeth Sweeney
+    - Ciprian Crainiceanu
+    pages:
+    - 41
+    - 48
+  - title: 'The RWiener package: an R package providing distribution functions for
+      the Wiener diffusion model'
+    slug: vandekerckhove-wabersich
+    author:
+    - Joachim Vandekerckhove
+    - Dominik Wabersich
+    pages:
+    - 49
+    - 56
+  - title: 'PivotalR: A Package for Machine Learning on Big Data'
+    slug: qian
+    author: Hai Qian
+    pages:
+    - 57
+    - 67
+  - title: 'rotations: An R Package for SO(3) Data'
+    slug: stanfill-hofmann-genschel
+    author:
+    - Bryan Stanfill
+    - Heike Hofmann
+    - Ulrike Genschel
+    pages:
+    - 68
+    - 78
+  - title: 'ROSE: a package for class imbalance learning'
+    slug: menardi-lunardon-torelli
+    author:
+    - Giovanna Menardi
+    - Nicola Lunardon
+    - Nicola Torelli
+    pages:
+    - 79
+    - 89
+  - title: 'investr: An R Package for Inverse Estimation'
+    slug: greenwell-kabban
+    author:
+    - Brandon Greenwell
+    - Christine Schubert Kabban
+    pages:
+    - 90
+    - 100
+  - title: 'Rankcluster: An R Package For Clustering Multivariate Partial Rankings'
+    slug: jacques-grimonprez-biernacki
+    author:
+    - Julien Jacques
+    - Quentin Grimonprez
+    - Christophe Biernacki
+    pages:
+    - 101
+    - 110
+  - title: 'stringdist: an R Package for Approximate String Matching'
+    slug: loo
+    author: Mark van der Loo
+    pages:
+    - 111
+    - 122
+  - title: 'RStorm: Developing and Testing Streaming Algorithms in R'
+    slug: kaptein
+    author: Maurits Kaptein
+    pages:
+    - 123
+    - 132
+  - title: The gridSVG package
+    slug: murrell-potter
+    author:
+    - Paul Murrell
+    - Simon Potter
+    pages:
+    - 133
+    - 143
+  - title: 'MRCV: A Package for Analyzing Categorical Variables with Multiple Response
+      Options'
+    slug: koziol-bilder
+    author:
+    - Natalie Koziol
+    - Christopher Bilder
+    pages:
+    - 144
+    - 150
+  - title: Archiving Reproducible Research with R and Dataverse
+    slug: leeper
+    author: Thomas J. Leeper
+    pages:
+    - 151
+    - 158
+  - title: 'oligoMask: A framework for assessing and removing the effect of genetic
+      variants on microarray probes'
+    slug: bottomly-wilmot-mcweeney
+    author:
+    - Daniel Bottomly
+    - Beth Wilmot
+    - Shannon McWeeney
+    pages:
+    - 159
+    - 163
+  - title: 'sgr: A Package for Simulating Conditional Fake Ordinal Data'
+    slug: lombardi-pastore
+    author:
+    - Luigi Lombardi
+    - Massimiliano Pastore
+    pages:
+    - 164
+    - 177
+  - heading: News and Notes
+  - title: Web Technologies Task View
+    slug: mair-chamberlain
+    author:
+    - Patrick Mair
+    - Scott Chamberlain
+    pages:
+    - 178
+    - 181
+  - title: Addendum to ``Statistical Software from a Blind Person's Perspective''
+    slug: godfrey-erhardt
+    author:
+    - A. Jonathan R. Godfrey
+    - Robert Erhardt
+    pages:
+    - 182
+    - 182
+  - title: R Foundation News
+    author: Kurt Hornik
+    slug: r-foundation
+    pages:
+    - 183
+    - 183
+  - title: News from the Bioconductor Project
+    author: Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 184
+    - 185
+  - title: Changes on CRAN
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 186
+    - 220
+  - title: Changes in R
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: r-changes
+    pages:
+    - 221
+    - 235
  
