manual edit of author names to be consistent with article

--- a/_config.yml
+++ b/_config.yml
@@ -1275,8 +1275,8 @@ issues:
       the Wiener diffusion model'
     slug: vandekerckhove-wabersich
     author:
-    - Joachim Vandekerckhove
     - Dominik Wabersich
+    - Joachim Vandekerckhove
     pages:
     - 49
     - 56
@@ -1295,11 +1295,11 @@ issues:
     pages:
     - 68
     - 78
-  - title: 'ROSE: a package for class imbalance learning'
+  - title: 'ROSE: A package for class imbalance learning'
     slug: menardi-lunardon-torelli
     author:
-    - Giovanna Menardi
     - Nicola Lunardon
+    - Giovanna Menardi
     - Nicola Torelli
     pages:
     - 79
@@ -1307,8 +1307,8 @@ issues:
   - title: 'investr: An R Package for Inverse Estimation'
     slug: greenwell-kabban
     author:
-    - Brandon Greenwell
-    - Christine Schubert Kabban
+    - Brandon M. Greenwell
+    - Christine M. Schubert Kabban
     pages:
     - 90
     - 100
@@ -1345,8 +1345,8 @@ issues:
       Options'
     slug: koziol-bilder
     author:
-    - Natalie Koziol
-    - Christopher Bilder
+    - Natalie A. Koziol
+    - Christopher R. Bilder
     pages:
     - 144
     - 150
@@ -1362,7 +1362,7 @@ issues:
     author:
     - Daniel Bottomly
     - Beth Wilmot
-    - Shannon McWeeney
+    - Shannon K. McWeeney
     pages:
     - 159
     - 163
