moved accepted articles online

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,22 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - title: Automatic Conversion of Tables to LongForm Dataframes
+    slug: oh
+    author: Jimmy Oh
+  - title: Prinsimp
+    slug: zhang-etal
+    author:
+    - Jonathan Zhang
+    - Nancy Heckman
+    - Davor Cubranic
+    - Joel G. Kingsolver
+    - Travis Gaydos
+  - title: 'Conference Report: R in Insurance 2014'
+    slug: gesmann-tsanakas
+    author:
+    - Markus Gesmann
+    - Andreas Tsanakas
 - issue: 2009-1
   year: 2009
   volume: 1
