online preview of 2 new articles

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,17 @@ issues:
     - Davor Cubranic
     - Joel G. Kingsolver
     - Travis Gaydos
+  - title: 'phaseR: An R Package for Phase Plane Analysis of Autonomous ODE Systems'
+    slug: grayling
+    author: Michael J. Grayling
+  - title: Applying spartan to Understand Parameter Uncertainty in Simulations
+    slug: alden-read-andrews-etal
+    author:
+    - Kieran Alden
+    - Mark Read
+    - Paul Andrews
+    - Jon Timmis
+    - Mark Coles
   - title: 'Conference Report: R in Insurance 2014'
     slug: gesmann-tsanakas
     author:
