--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - title: Coordinate-Based Meta-Analysis of fMRI Studies with R
+    slug: stocco
+    author: Andrea Stocco
   - title: Automatic Conversion of Tables to LongForm Dataframes
     slug: oh
     author: Jimmy Oh
