moved accepted article online

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,11 @@ issues:
     - Paul Andrews
     - Jon Timmis
     - Mark Coles
+  - title: 'sgof: An R Package for Multiple Testing Problems'
+    slug: conde-alvarez
+    author:
+    - Irene Castro Conde
+    - Jacobo de Uña Álvarez
   - title: 'Conference Report: R in Insurance 2014'
     slug: gesmann-tsanakas
     author:
