moved accepted articles online

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ issues:
   - title: 'phaseR: An R Package for Phase Plane Analysis of Autonomous ODE Systems'
     slug: grayling
     author: Michael J. Grayling
+  - title: Flexible R Functions for Processing Accelerometer Data, with Emphasis on
+      NHANES 2003-2006
+    slug: domelen-pittard
+    author:
+    - Dane R. Van Domelen
+    - W. Stephen Pittard
   - title: Applying spartan to Understand Parameter Uncertainty in Simulations
     slug: alden-read-andrews-etal
     author:
@@ -27,11 +33,34 @@ issues:
     - Paul Andrews
     - Jon Timmis
     - Mark Coles
+  - title: 'ngspatial: A Package for Fitting the Centered Autologistic and Sparse Spatial
+      Generalized Linear Mixed Models for Areal Data'
+    slug: hughes
+    author: John Hughes
   - title: 'sgof: An R Package for Multiple Testing Problems'
     slug: conde-alvarez
     author:
     - Irene Castro Conde
     - Jacobo de Uña Álvarez
+  - title: 'SMR: An R package for computing the externally studentized normal midrange
+      distribution'
+    slug: ferreira-batista
+    author:
+    - Daniel Furtado Ferreira
+    - Ben Deivide Oliveira Batista
+  - title: 'MVN: An R Package for Assessing Multivariate Normality'
+    slug: korkmaz-goksuluk-zararsiz
+    author:
+    - Selcuk Korkmaz
+    - Dincer Goksuluk
+    - Gokmen Zararsiz
+  - title: 'qmethod: A Package to Explore Human Perspectives Using Q Methodology'
+    slug: zabala
+    author: Aiora Zabala
+  - title: 'gset: An R package for exact sequential test of equivalence hypothesis based
+      on bivariate non-central $t$-statistics'
+    slug: liu
+    author: Fang Liu
   - title: 'Conference Report: R in Insurance 2014'
     slug: gesmann-tsanakas
     author:
