two more articles online

--- a/_config.yml
+++ b/_config.yml
@@ -42,12 +42,24 @@ issues:
     author:
     - Irene Castro Conde
     - Jacobo de Uña Álvarez
+  - title: 'bshazard: A Flexible Tool for Nonparametric Smoothing of the Hazard Function'
+    slug: rebora-salim-reilly
+    author:
+    - Paola Rebora
+    - Agus Salim
+    - Marie Reilly
   - title: 'SMR: An R package for computing the externally studentized normal midrange
       distribution'
     slug: ferreira-batista
     author:
     - Daniel Furtado Ferreira
     - Ben Deivide Oliveira Batista
+  - title: 'Farewell''s Linear Increments Model for Missing Data: The FLIM package'
+    slug: hoff-gran-farewell
+    author:
+    - Rune Hoff
+    - Jon Michael Gran
+    - Daniel Farewell
   - title: 'MVN: An R Package for Assessing Multivariate Normality'
     slug: korkmaz-goksuluk-zararsiz
     author:
