--- a/_config.yml
+++ b/_config.yml
@@ -2,82 +2,6 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - title: Coordinate-Based Meta-Analysis of fMRI Studies with R
-    slug: stocco
-    author: Andrea Stocco
-  - title: Automatic Conversion of Tables to LongForm Dataframes
-    slug: oh
-    author: Jimmy Oh
-  - title: Prinsimp
-    slug: zhang-etal
-    author:
-    - Jonathan Zhang
-    - Nancy Heckman
-    - Davor Cubranic
-    - Joel G. Kingsolver
-    - Travis Gaydos
-  - title: 'phaseR: An R Package for Phase Plane Analysis of Autonomous ODE Systems'
-    slug: grayling
-    author: Michael J. Grayling
-  - title: Flexible R Functions for Processing Accelerometer Data, with Emphasis on
-      NHANES 2003-2006
-    slug: domelen-pittard
-    author:
-    - Dane R. Van Domelen
-    - W. Stephen Pittard
-  - title: Applying spartan to Understand Parameter Uncertainty in Simulations
-    slug: alden-read-andrews-etal
-    author:
-    - Kieran Alden
-    - Mark Read
-    - Paul Andrews
-    - Jon Timmis
-    - Mark Coles
-  - title: 'ngspatial: A Package for Fitting the Centered Autologistic and Sparse Spatial
-      Generalized Linear Mixed Models for Areal Data'
-    slug: hughes
-    author: John Hughes
-  - title: 'sgof: An R Package for Multiple Testing Problems'
-    slug: conde-alvarez
-    author:
-    - Irene Castro Conde
-    - Jacobo de Uña Álvarez
-  - title: 'bshazard: A Flexible Tool for Nonparametric Smoothing of the Hazard Function'
-    slug: rebora-salim-reilly
-    author:
-    - Paola Rebora
-    - Agus Salim
-    - Marie Reilly
-  - title: 'SMR: An R package for computing the externally studentized normal midrange
-      distribution'
-    slug: ferreira-batista
-    author:
-    - Daniel Furtado Ferreira
-    - Ben Deivide Oliveira Batista
-  - title: 'Farewell''s Linear Increments Model for Missing Data: The FLIM package'
-    slug: hoff-gran-farewell
-    author:
-    - Rune Hoff
-    - Jon Michael Gran
-    - Daniel Farewell
-  - title: 'MVN: An R Package for Assessing Multivariate Normality'
-    slug: korkmaz-goksuluk-zararsiz
-    author:
-    - Selcuk Korkmaz
-    - Dincer Goksuluk
-    - Gokmen Zararsiz
-  - title: 'qmethod: A Package to Explore Human Perspectives Using Q Methodology'
-    slug: zabala
-    author: Aiora Zabala
-  - title: 'gset: An R package for exact sequential test of equivalence hypothesis based
-      on bivariate non-central $t$-statistics'
-    slug: liu
-    author: Fang Liu
-  - title: 'Conference Report: R in Insurance 2014'
-    slug: gesmann-tsanakas
-    author:
-    - Markus Gesmann
-    - Andreas Tsanakas
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -1495,4 +1419,176 @@ issues:
     pages:
     - 221
     - 235
- 
+- issue: 2014-2
+  year: 2014
+  volume: 6
+  num: 2
+  month: Dec
+  articles:
+  - title: Editorial
+    author: Deepayan Sarkar
+    slug: editorial
+    pages:
+    - 3
+    - 3
+  - heading: Contributed Research Articles
+  - title: Coordinate-Based Meta-Analysis of fMRI Studies with R
+    slug: stocco
+    author: Andrea Stocco
+    pages:
+    - 5
+    - 15
+  - title: Automatic Conversion of Tables to LongForm Dataframes
+    slug: oh
+    author: Jimmy Oh
+    pages:
+    - 16
+    - 26
+  - title: Prinsimp
+    slug: zhang-etal
+    author:
+    - Jonathan Zhang
+    - Nancy Heckman
+    - Davor Cubranic
+    - Joel G. Kingsolver
+    - Travis Gaydos and J.S. Marron
+    pages:
+    - 27
+    - 42
+  - title: 'phaseR: An R Package for Phase Plane Analysis of Autonomous ODE Systems'
+    slug: grayling
+    author: Michael J. Grayling
+    pages:
+    - 43
+    - 51
+  - title: Flexible R Functions for Processing Accelerometer Data, with Emphasis on
+      NHANES 2003-2006
+    slug: domelen-pittard
+    author:
+    - Dane R. Van Domelen
+    - W. Stephen Pittard
+    pages:
+    - 52
+    - 62
+  - title: Applying spartan to Understand Parameter Uncertainty in Simulations
+    slug: alden-read-andrews-etal
+    author:
+    - Kieran Alden
+    - Mark Read
+    - Paul S. Andrews
+    - Jon Timmis
+    - Mark Coles
+    pages:
+    - 63
+    - 80
+  - title: 'ngspatial: A Package for Fitting the Centered Autologistic and Sparse
+      Spatial Generalized Linear Mixed Models for Areal Data'
+    slug: hughes
+    author: John Hughes
+    pages:
+    - 81
+    - 95
+  - title: 'sgof: An R Package for Multiple Testing Problems'
+    slug: conde-alvarez
+    author:
+    - Irene Castro-Conde
+    - Jacobo de Uña-Álvarez
+    pages:
+    - 96
+    - 113
+  - title: 'bshazard: A Flexible Tool for Nonparametric Smoothing of the Hazard Function'
+    slug: rebora-salim-reilly
+    author:
+    - Paola Rebora
+    - Agus Salim
+    - Marie Reilly
+    pages:
+    - 114
+    - 122
+  - title: 'SMR: An R package for computing the externally studentized normal midrange
+      distribution'
+    slug: ferreira-batista
+    author:
+    - Ben Dêivide Oliveira Batista
+    - Daniel Furtado Ferreira
+    pages:
+    - 123
+    - 136
+  - title: 'Farewell''s Linear Increments Model for Missing Data: The FLIM package'
+    slug: hoff-gran-farewell
+    author:
+    - Rune Hoff
+    - Jon Michael Gran
+    - Daniel Farewell
+    pages:
+    - 137
+    - 150
+  - title: 'MVN: An R Package for Assessing Multivariate Normality'
+    slug: korkmaz-goksuluk-zararsiz
+    author:
+    - Selcuk Korkmaz
+    - Dincer Goksuluk
+    - Gokmen Zararsiz
+    pages:
+    - 151
+    - 163
+  - title: 'qmethod: A Package to Explore Human Perspectives Using Q Methodology'
+    slug: zabala
+    author: Aiora Zabala
+    pages:
+    - 164
+    - 174
+  - title: 'gset: An R package for exact sequential test of equivalence hypothesis
+      based on bivariate non-central $t$-statistics'
+    slug: liu
+    author: Fang Liu
+    pages:
+    - 175
+    - 185
+  - heading: News and Notes
+  - title: 'Conference Report: R in Insurance 2014'
+    slug: gesmann-tsanakas
+    author:
+    - Markus Gesmann
+    - Andreas Tsanakas
+    pages:
+    - 186
+    - 187
+  - title: 'Conference Report: Polish Academic R User Meeting'
+    slug: beresewicz-szabelska-zyprychwalczak-etal
+    author:
+    - Maciej Beręsewicz
+    - Alicja Szabelska
+    - Joanna Zyprych-Walczak
+    - Łukasz Wawrowski
+    pages:
+    - 188
+    - 190
+  - title: R Foundation News
+    author: Kurt Hornik
+    slug: r-foundation
+    pages:
+    - 191
+    - 192
+  - title: News from the Bioconductor Project
+    author: Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 193
+    - 193
+  - title: Changes on CRAN
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 194
+    - 225
+  - title: Changes in R
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: r-changes
+    pages:
+    - 226
+    - 228
