more updates for new issue

--- a/_config.yml
+++ b/_config.yml
@@ -1451,7 +1451,8 @@ issues:
     - Nancy Heckman
     - Davor Cubranic
     - Joel G. Kingsolver
-    - Travis Gaydos and J.S. Marron
+    - Travis Gaydos
+    - J. S. Marron
     pages:
     - 27
     - 42
