Fix metadata for early issues
The metadata for the early issues of the R Journal (2009-2012) were
slightly screwed up (only for non-linked articles, e.g., in News and Notes),
as pointed out by Kurt in an email dated 2014/10/28. Mostly the metadata was
all there, but under wrong issues. Hopefully this commit fixes these errors.

We may additionally want to make these link to PDF snippets and add them to the
bibliography, as in issues from 2013 onward. But this will need more work.

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,8 @@ issues:
   - slug: Ardia+et+al
     title: 'AdMit: Adaptive Mixtures of Student-$t$ Distributions'
     author:
-    - Lennart F. Hoogerheide David Ardia
+    - David Ardia
+    - Lennart F. Hoogerheide 
     - Herman K. van Dijk
     pages:
     - 25
@@ -48,7 +49,8 @@ issues:
   - slug: Goulet+et+al
     title: 'expert: Modeling Without Data Using Expert Opinion'
     author:
-    - Michel Jacques Vincent Goulet
+    - Vincent Goulet
+    - Michel Jacques
     - Mathieu Pigeon
     pages:
     - 31
@@ -58,7 +60,8 @@ issues:
       mvtnorm: New Numerical Algorithm for Multivariate Normal
       Probabilities
     author:
-    - Tetsuhisa Miwa Xuefei Mi
+    - Xuefei Mi
+    - Tetsuhisa Miwa
     - Torsten Hothorn
     pages:
     - 37
@@ -86,8 +89,9 @@ issues:
   - slug: Knaus+et+al
     title: Easier Parallel Computing in R with snowfall and sfCluster
     author:
+    - Jochen Knaus
     - Christine Porzelius
-    - Harald Binder Jochen Knaus
+    - Harald Binder
     - Guido Schwarzer
     pages:
     - 54
@@ -95,8 +99,9 @@ issues:
   - slug: Guazzelli+et+al
     title: 'PMML: An Open Standard for Sharing Models'
     author:
+    - Alex Guazzelli
     - Michael Zeller
-    - Wen-Ching Lin Alex Guazzelli
+    - Wen-Ching Lin
     - Graham Williams
     pages:
     - 60
@@ -206,20 +211,18 @@ issues:
     - 60
     - 65
   notes:
-  - title: A Beginner's Guide to R
-    page: 59
-  - title: 'Conference Review: The 2nd Chinese R Conference'
-    page: 60
-  - title: 'Introducing NppToR: R Interaction for Notepad++'
-    page: 62
-  - title: Changes in R 2.10.1-2.11.1
-    page: 64
+  - title: 'Conference Review: DSC 2009'
+    page: 66
+  - title: 'Conference Review: WZUR(2.0) - The Second Meeting of Polish R Users'
+    page: 67
+  - title: 'R Changes: 2.9.1-2.10.0 Patched'
+    page: 68
   - title: Changes on CRAN
-    page: 72
+    page: 80
   - title: News from the Bioconductor Project
-    page: 85
+    page: 95
   - title: R Foundation News
-    page: 86
+    page: 96
 - issue: 2010-1
   volume: 2
   year: 2010
@@ -239,7 +242,7 @@ issues:
     - Hinrich Göhlmann
     - An De Bondt
     - Willem Talloen
-    - Luc Bijnens.
+    - Luc Bijnens
     pages:
     - 5
     - 12
@@ -307,20 +310,20 @@ issues:
     - 53
     - 58
   notes:
-  - title: Forest Analytics with R (Use R)
-    page: 75
-  - title: 'Conference Review: Third Meeting of Polish R Users, The Influenza Challenge '
-    page: 76
-  - title: 'Conference Review: Kickoff Workshop for Project MOSAIC'
-    page: 78
-  - title: Changes in R
-    page: 79
+  - title: A Beginner's Guide to R
+    page: 59
+  - title: 'Conference Review: The 2nd Chinese R Conference'
+    page: 60
+  - title: 'Introducing NppToR: R Interaction for Notepad++'
+    page: 62
+  - title: Changes in R 2.10.1-2.11.1
+    page: 64
   - title: Changes on CRAN
-    page: 89
+    page: 72
   - title: News from the Bioconductor Project
-    page: 101
+    page: 85
   - title: R Foundation News
-    page: 102
+    page: 86
 - issue: 2010-2
   volume: 2
   year: 2010
@@ -411,12 +414,20 @@ issues:
     - 68
     - 73
   notes:
+  - title: What's New?
+    page: 74
+  - title: useR! 2010
+    page: 77
+  - title: 'Forthcoming Events: useR! 2011'
+    page: 79
   - title: Changes in R
-    page: 70
+    page: 81
   - title: Changes on CRAN
-    page: 80
+    page: 90
+  - title: News from the Bioconductor Project
+    page: 101
   - title: R Foundation News
-    page: 96
+    page: 102
 - issue: 2011-1
   volume: 3
   year: 2011
@@ -523,18 +534,20 @@ issues:
     - 72
     - 74
   notes:
-  - title: 'Conference Review: DSC 2009'
-    page: 66
-  - title: 'Conference Review: WZUR(2.0) - The Second Meeting of Polish R Users'
-    page: 67
-  - title: 'R Changes: 2.9.1-2.10.0 Patched'
-    page: 68
+  - title: Forest Analytics with R (Use R)
+    page: 75
+  - title: 'Conference Review: Third Meeting of Polish R Users, The Influenza Challenge '
+    page: 76
+  - title: 'Conference Review: Kickoff Workshop for Project MOSAIC'
+    page: 78
+  - title: Changes in R
+    page: 79
   - title: Changes on CRAN
-    page: 80
+    page: 89
   - title: News from the Bioconductor Project
-    page: 95
+    page: 101
   - title: R Foundation News
-    page: 96
+    page: 102
 - issue: 2011-2
   volume: 3
   year: 2011
@@ -626,20 +639,20 @@ issues:
     - 60
     - 63
   notes:
-  - title: What's New?
-    page: 74
-  - title: useR! 2010
-    page: 77
-  - title: 'Forthcoming Events: useR! 2011'
-    page: 79
+  - title: R's Participation in the Google Summer of Code 2011
+    page: 64
+  - title: 'Conference Report: useR! 2011'
+    page: 68
+  - title: 'Forthcoming Events: useR! 2012'
+    page: 70
   - title: Changes in R
-    page: 81
+    page: 72
   - title: Changes on CRAN
-    page: 90
+    page: 84
   - title: News from the Bioconductor Project
-    page: 101
+    page: 86
   - title: R Foundation News
-    page: 102
+    page: 87
 - issue: 2012-1
   volume: 4
   year: 2012
@@ -732,20 +745,12 @@ issues:
     - 64
     - 69
   notes:
-  - title: R's Participation in the Google Summer of Code 2011
-    page: 64
-  - title: 'Conference Report: useR! 2011'
-    page: 68
-  - title: 'Forthcoming Events: useR! 2012'
-    page: 70
   - title: Changes in R
-    page: 72
+    page: 70
   - title: Changes on CRAN
-    page: 84
-  - title: News from the Bioconductor Project
-    page: 86
+    page: 80
   - title: R Foundation News
-    page: 87
+    page: 96
 - issue: 2012-2
   volume: 4
   year: 2012
