misc last minute fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1511,8 +1511,8 @@ issues:
     pages:
     - 114
     - 122
-  - title: 'SMR: An R package for computing the externally studentized normal midrange
-      distribution'
+  - title: 'SMR: An R Package for Computing the Externally Studentized Normal Midrange
+      Distribution'
     slug: ferreira-batista
     author:
     - Ben Dêivide Oliveira Batista
@@ -1537,20 +1537,20 @@ issues:
     - Gokmen Zararsiz
     pages:
     - 151
-    - 163
+    - 162
   - title: 'qmethod: A Package to Explore Human Perspectives Using Q Methodology'
     slug: zabala
     author: Aiora Zabala
     pages:
-    - 164
-    - 174
-  - title: 'gset: An R package for exact sequential test of equivalence hypothesis
-      based on bivariate non-central $t$-statistics'
+    - 163
+    - 173
+  - title: 'gset: An R Package for Exact Sequential Test of Equivalence Hypothesis
+      Based on Bivariate Non-Central t-Statistics'
     slug: liu
     author: Fang Liu
     pages:
-    - 175
-    - 185
+    - 174
+    - 184
   - heading: News and Notes
   - title: 'Conference Report: R in Insurance 2014'
     slug: gesmann-tsanakas
@@ -1558,8 +1558,8 @@ issues:
     - Markus Gesmann
     - Andreas Tsanakas
     pages:
+    - 185
     - 186
-    - 187
   - title: 'Conference Report: Polish Academic R User Meeting'
     slug: beresewicz-szabelska-zyprychwalczak-etal
     author:
@@ -1568,27 +1568,27 @@ issues:
     - Joanna Zyprych-Walczak
     - Łukasz Wawrowski
     pages:
-    - 188
-    - 190
+    - 187
+    - 189
   - title: R Foundation News
     author: Kurt Hornik
     slug: r-foundation
     pages:
+    - 190
     - 191
-    - 192
   - title: Changes on CRAN
     author:
     - Kurt Hornik
     - Achim Zeileis
     slug: cran
     pages:
-    - 193
-    - 224
+    - 192
+    - 223
   - title: Changes in R
     author:
     - Kurt Hornik
     - Achim Zeileis
     slug: r-changes
     pages:
-    - 225
-    - 227
+    - 224
+    - 226
