added Martin Maechler as author

--- a/_config.yml
+++ b/_config.yml
@@ -1571,7 +1571,9 @@ issues:
     - 187
     - 189
   - title: R Foundation News
-    author: Kurt Hornik
+    author:
+    - Martin Mächler
+    - Kurt Hornik
     slug: r-foundation
     pages:
     - 190
