added Bioconductor news

--- a/_config.yml
+++ b/_config.yml
@@ -1594,3 +1594,9 @@ issues:
     pages:
     - 224
     - 226
+  - title: News from the Bioconductor Project
+    author: The Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 227
+    - 228
