fix author of r-changes

--- a/_config.yml
+++ b/_config.yml
@@ -1417,9 +1417,7 @@ issues:
     - 186
     - 220
   - title: Changes in R
-    author:
-    - Kurt Hornik
-    - Achim Zeileis
+    author: The R Core Team
     slug: r-changes
     pages:
     - 221
@@ -1587,9 +1585,7 @@ issues:
     - 192
     - 223
   - title: Changes in R
-    author:
-    - Kurt Hornik
-    - Achim Zeileis
+    author: The R Core Team
     slug: r-changes
     pages:
     - 224
