_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - title: 'Peptides: A Package for Data Mining of Antimicrobial Peptides'
+    slug: osorio-rondonvillarreal-torres
+    author:
+    - Daniel Osorio
+    - Paola Rondón-Villarreal
+    - Rodrigo Torres
 - issue: 2009-1
   year: 2009
   volume: 1
