--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ issues:
     - Daniel Osorio
     - Paola Rondón-Villarreal
     - Rodrigo Torres
+  - title: 'Identifying Complex Causal Dependencies in Configurational Data with Coincidence Analysis'
+    slug: baumgartner-thiem
+    author:
+    - Michael Baumgartner
+    - Alrik Thiem
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -21,7 +26,7 @@ issues:
     - 5
     - 8
   - slug: Theussl+Zeileis
-    title: Collaborative Software Development Using R-Forge
+    title: 'Collaborative Software Development Using R-Forge'
     author:
     - Stefan Theußl
     - Achim Zeileis
@@ -30,7 +35,7 @@ issues:
     - 9
     - 14
   - slug: Murrell
-    title: Drawing Diagrams with R
+    title: 'Drawing Diagrams with R'
     author: Paul Murrell
     pages:
     - 15
