--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ issues:
     author:
     - Michael Baumgartner
     - Alrik Thiem
+  - title: 'fanplot: An R Package for Visualising Sequential Distributions'
+    slug: abel
+    author:
+    - Guy Abel
 - issue: 2009-1
   year: 2009
   volume: 1
