further accepted articles online

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,27 @@ issues:
     slug: abel
     author:
     - Guy Abel
+  - title: 'rdrobust: An R Package for Robust Inference in Regression-Discontinuity Designs'
+    slug: calonico-cattaneo-titiunik
+    author:
+    - Matias D. Cattaneo
+    - Sebastian Calonico
+    - Rocio Titiunik
+  - title: 'The Complex Multivariate Gaussian Distribution'
+    slug: hankin
+    author:
+    - Robin Hankin
+  - title: 'Frames2: A Package for Estimation in Dual Frame Surveys'
+    slug: arcos-molina-ranalli-rueda
+    author:
+    - Antonio Arcos
+    - David Molina
+    - Maria Giovanna Ranalli
+    - María del Mar Rueda
+  - title: 'The gridGraphics Package'
+    slug: murrell
+    author:
+    - Paul Murrell
 - issue: 2009-1
   year: 2009
   volume: 1
