--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,12 @@ issues:
     slug: murrell
     author:
     - Paul Murrell
+  - title: 'Manipulation of Discrete Random Variables with discreteRV'
+    slug: hare-buja-hofmann
+    author:
+    - Eric Hare
+    - Andreas Buja
+    - Heike Hofmann
 - issue: 2009-1
   year: 2009
   volume: 1
