--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,10 @@ issues:
     - Eric Hare
     - Andreas Buja
     - Heike Hofmann
+  - title: 'Estimability Tools for Package Developers'
+    slug: lenth
+    author:
+    - Russell V. Lenth
 - issue: 2009-1
   year: 2009
   volume: 1
