--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,16 @@ issues:
     slug: lenth
     author:
     - Russell V. Lenth
+  - title: 'sparkTable: Generating Graphical Tables for Websites and Documents with R'
+    slug: templ+kowarik+meindl
+    author:
+    - Matthias Templ
+    - Alexander Kowarik
+    - Bernhard Meindl
+  - title: 'showtext: Using System Fonts in R Graphics'
+    slug: qiu
+    author:
+    - Yixuan Qiu
 - issue: 2009-1
   year: 2009
   volume: 1
